<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2019 The TensorFlow Authors. All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btn_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_camera"
        app:layout_constraintDimensionRatio="9:16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.73" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_validation_top_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.17" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_validation_top_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.23" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_validation_left_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_validation_left_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.18" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_validation_right_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.82" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_validation_right_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.88" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_validation_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/sdk_color_primary"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/top_divider"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:background="@color/sdk_color_primary"
            app:layout_constraintEnd_toEndOf="@+id/guide_right"
            app:layout_constraintStart_toStartOf="@+id/guide_left"
            app:layout_constraintTop_toBottomOf="@+id/guide_top" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bottom_divider"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:background="@color/sdk_color_primary"
            app:layout_constraintEnd_toEndOf="@+id/right_divider"
            app:layout_constraintStart_toStartOf="@+id/guide_left"
            app:layout_constraintTop_toBottomOf="@+id/guide_bottom" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/left_divider"
            android:layout_width="4dp"
            android:layout_height="0dp"
            android:background="@color/sdk_color_primary"
            app:layout_constraintBottom_toBottomOf="@+id/guide_bottom"
            app:layout_constraintStart_toStartOf="@+id/guide_left"
            app:layout_constraintTop_toTopOf="@+id/guide_top" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/right_divider"
            android:layout_width="4dp"
            android:layout_height="0dp"
            android:background="@color/sdk_color_primary"
            app:layout_constraintBottom_toBottomOf="@+id/guide_bottom"
            app:layout_constraintStart_toStartOf="@+id/guide_right"
            app:layout_constraintTop_toTopOf="@+id/guide_top" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_empty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rect_all_corner_filled_gray"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:weightSum="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_divider">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_guide_1"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/ic_incomplete"
                android:gravity="center"
                android:text="@string/sdk_term_guide_1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_guide_2"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/ic_incomplete"
                android:gravity="center"
                android:text="@string/sdk_term_guide_2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_guide_3"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/ic_incomplete"
                android:gravity="center"
                android:text="@string/sdk_term_guide_3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_guide_4"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/ic_incomplete"
                android:gravity="center"
                android:text="@string/sdk_term_guide_4" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_status_a4"
                style="@style/h6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sdk_activity_foot_camera_status_3"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_zoom_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_zoom_out"
            app:layout_constraintBottom_toBottomOf="@+id/btn_zoom_in"
            app:layout_constraintEnd_toStartOf="@+id/btn_zoom_in"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UnusedAttribute" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_zoom_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_zoom_in"
            app:layout_constraintBottom_toTopOf="@+id/top_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_zoom_out"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_camera_disable"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_camera_btn_disable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_circle"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/circle_black_75"
        app:layout_constraintBottom_toBottomOf="@+id/btn_camera"
        app:layout_constraintEnd_toEndOf="@+id/btn_camera"
        app:layout_constraintStart_toStartOf="@+id/btn_camera"
        app:layout_constraintTop_toTopOf="@+id/btn_camera" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_camera"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_camera_btn"
        android:foreground="?attr/selectableItemBackground"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:indeterminateTint="@color/sdk_color_primary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_camera"
        app:layout_constraintEnd_toEndOf="@+id/btn_camera"
        app:layout_constraintStart_toStartOf="@+id/btn_camera"
        app:layout_constraintTop_toTopOf="@+id/btn_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>